examples/good/17-basic-lambda.cnla
Int main () {
  con Func lambda = [con Str word] -> Void {
    print("What a nice word! ");
    print(word);
    print("\nLovely, isn't it?\n");
  };
  lambda("Canela");
  return 0 ;
}
